Add: Enable HTTP/2 support for Daphne via Twisted extras

--- a/.render.yaml
+++ b/.render.yaml
@@ -3,7 +3,7 @@ services:
     name: community-app
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn config.wsgi"
+    startCommand: "daphne -b 0.0.0.0 -p $PORT config.asgi:application"
     envVars:
       - key: DJANGO_SETTINGS_MODULE
         value: config.settings
